--- a/ziva_map_styles.css
+++ b/ziva_map_styles.css
@@ -22,8 +22,16 @@
     max-width: 75%;
 }
 
+.map-footer {
+	position: absolute;
+	bottom: 0; 
+	background-color: #2b83ba;
+	height: 30px;
+	width: 25%;
+}
+
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-@media (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
 	.left_panel_column {
         -ms-flex: 100%;
         flex: 100%;
@@ -36,6 +44,10 @@
         flex: 100%;
         max-width: 100%;
     }
+	
+	.map-footer {
+		display: none;
+	}	
 }
 
 .heading {
@@ -74,13 +86,11 @@
     height: 35px;
     display: block;
     padding: 0;
-    outline: none;
-    border: 0;
     box-sizing: border-box;
     background-color: #fff;
     cursor: pointer;
 	border-radius: 4px; 
-	border: 1px solid #ddd;
+	border: 0.2rem solid #ddd;
 }
 
 /**
