--- a/ziva_map_styles.css
+++ b/ziva_map_styles.css
@@ -10,16 +10,16 @@
 
 /* Create two un-equal columns that sit next to each other */
 .left_panel_column {
-    -ms-flex: 25%; /* IE10 */
-    flex: 25%;
-    max-width: 25%;
+    -ms-flex: 30%; /* IE10 */
+    flex: 30%;
+    max-width: 30%;
 	text-align: left;
 }
 
 .map_column {
-    -ms-flex: 75%; /* IE10 */
-    flex: 75%;
-    max-width: 75%;
+    -ms-flex: 70%; /* IE10 */
+    flex: 70%;
+    max-width: 70%;
 }
 
 .map-footer {
@@ -27,7 +27,7 @@
 	bottom: 0; 
 	background-color: #2b83ba;
 	height: 30px;
-	width: 25%;
+	width: 30%;
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@@ -97,23 +97,16 @@
 * Set rules for how legend will be displayed
 * on the page. */
 .map-overlay {
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	background: rgba(255, 255, 255, 0.8);
-	margin-right: 40px;
 	font-family: Arial, sans-serif;
 	overflow: auto;
-	border-radius: 3px;
 }
 
 #legend {
-	padding: 10px;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-	line-height: 18px;
-	height: 75px;
-	margin-bottom: 40px;
-	width: 320px;
+	/*line-height: 18px;*/
+	height: 120px;
+	width: 90%;
+	margin-left: auto; 
+	margin-right: auto; 
 }
 
 .legend label,
@@ -123,6 +116,7 @@
 	height:15px;
 	width:20%;
 	text-align:center;
-	font-size:9px;
+	font-size:12px;
 	color:#808080;
+	margin-top:5px;
 }
